--- a/index.html
+++ b/index.html
@@ -9,10 +9,23 @@
 </head>
 
 <body>
+  <div class="container">
+    <div class="to-do-app">
+      <h2>To Do List <img src="images/icon.png" alt=""> </h2>
+      <div class="row">
+        <input type="text" id="input-box" placeholder="Add your text">
+        <button input="text">Add</button>
+      </div>
+      <div class="list-container">
+        <ul>
+          <!-- <li class="checked">Task 1</li>
+          <li>Task 2</li>
+          <li>Task 3</li> -->
+        </ul>
+      </div>
+    </div>
 
-
-
-
+  </div>
 </body>
 <script src="script.js"></script>
 
