--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h2>To Do List <img src="images/icon.png" alt=""> </h2>
       <div class="row">
         <input type="text" id="input-box" placeholder="Add your text">
-        <button onclick="addTask()">Add</button>
+        <button id="mybtn" onclick="addTask()">Add</button>
       </div>
       <div class="">
         <ul id="list-container">
